Bugfix: Fix last line of PIL TOC instructions being cut off.
Resolves #295.

--- a/app/assets/stylesheets/components/officialness/_fr_info_box.scss
+++ b/app/assets/stylesheets/components/officialness/_fr_info_box.scss
@@ -8,7 +8,6 @@
   .col-md-1 { padding-left: 0; }
   .col-md-11 {
     position: relative;
-    height: 435px;
   }
 
   .icon-fr2-info_circle {
